--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@fontsource/anton": "^5.2.6",
+    "@splinetool/react-spline": "^4.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
+    "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
